--- a/Yupay/templates/forms.html
+++ b/Yupay/templates/forms.html
@@ -39,12 +39,12 @@
 					YUPAY
 				</span>
 
-				<div class="wrap-input100 validate-input bg1" data-validate="Please Type Your Name">
+				<div class="wrap-input100 validate-input bg1" data-validate="INGRESE UNA RUC VALIDA PORFAVOR">
 					<span class="label-input100">Ruc de la empresa *</span>
 					<input class="input100" type="number" name="name" placeholder="RUC">
 				</div>
 
-				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your Email (e@a.x)">
+				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "INGRESE UN NOMBRE VALIDO">
 					<span class="label-input100"> ingrese nombre de la empresa*</span>
 					<input class="input100" type="text" name="name" placeholder="NOMBRE">
 				</div>
