--- a/Yupay/stamp/templates/forms.html
+++ b/Yupay/stamp/templates/forms.html
@@ -43,23 +43,23 @@
 
 				<div class="wrap-input100 validate-input bg1" data-validate="INGRESE UNA RUC VALIDA PORFAVOR">
 					<span class="label-input100">Ruc de la empresa *</span>
-					<input class="input100" type="number" name="RUC" placeholder="RUC">
+					<input class="input100" id = "RUC" type="number" name="RUC" placeholder="RUC">
 				</div>
 
 				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "INGRESE UN NOMBRE VALIDO">
 					<span class="label-input100"> ingrese nombre de la empresa*</span>
-					<input class="input100" type="text" name="name" placeholder="NOMBRE">
+					<input class="input100" id = "name" type="text" name="name" placeholder="NOMBRE">
 				</div>
 
 				<div class="wrap-input100 bg1 rs1-wrap-input100">
 					<span class="label-input100">DNI*</span>
-					<input class="input100" type="number" name="userid" placeholder="INGRESA EL NUMERO DE DNI">
+					<input class="input100" id = "userid" type="number" name="userid" placeholder="INGRESA EL NUMERO DE DNI">
 				</div>
 
 				<div class="wrap-input100 input100-select bg1">
 					<span class="label-input100">SERVICIO OFRECIDO *</span>
 					<div>
-						<select class="js-select2" name="service">
+						<select class="js-select2" id = "service" name="service">
 							<option>Empresa de telefonia</option>
 							<option>Empresa de servicios basicos</option>
 							<option>Empresa de salud</option>
@@ -78,7 +78,7 @@
 						<span class="label-input100">Dinero en Soles *</span>
 
 						<div class="values">
-							<input type="number" class="values" name="monto" S/>
+							<input type="number" id = "monto" class="values" name="monto" S/>
 						</div>
 					</div>
 				</div>
