--- a/Yupay/stamp/templates/search.html
+++ b/Yupay/stamp/templates/search.html
@@ -36,7 +36,7 @@
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form" method = "post">{% csrf_token %}
+			<form class="contact100-form validate-form">
 				<span class="contact100-form-title">
 					YUPAY
 				</span>
